Packet AOS (Front End)

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "aos": "^3.0.0-beta.6",
         "flowbite": "^2.3.0",
         "tw-elements": "^2.0.0"
     }
