--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "aos": "^3.0.0-beta.6",
         "flowbite": "^2.3.0",
+        "sweetalert2": "^11.11.1",
         "tw-elements": "^2.0.0"
     }
 }
