--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
-        "phpmailer/phpmailer": "^6.9",
-        "spatie/laravel-permission": "^6.7"
+        "phpmailer/phpmailer": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
