--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-gd": "*",
+        "barryvdh/laravel-dompdf": "^2.2",
         "bensampo/laravel-enum": "^6.11",
         "guzzlehttp/guzzle": "^7.2",
         "jantinnerezo/livewire-alert": "^3.0",
